Fixed whitespace and flex-basis issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -242,49 +242,38 @@ h1 {
     align-items: center;
     /*    width: 100%;*/
     /*    flex-wrap: nowrap;*/
+    /*    flex-shrink: 0;*/
+    white-space: nowrap;
 }
 
 .main-nav li a .bullet {
     background-color: var(--dark);
     /*    float: left;*/
     height: 3px;
-    width: 30%;
+    /*    width: 30%;*/
     margin: 5px;
-    /*    flex: 1 1 50%;*/
-    -webkit-transition: width 2s ease-out;
-    -moz-transition: width 2s ease-out;
-    -ms-transition: width 2s ease-out;
-    -o-transition: width 2s ease-out;
-    transition: width 2s ease-out;
+    flex: 1 2 30%;
+    -webkit-transition: flex-basis 2s ease-out;
+    -moz-transition: flex-basis 2s ease-out;
+    -ms-transition: flex-basis 2s ease-out;
+    -o-transition: flex-basis 2s ease-out;
+    transition: flex-basis 2s ease-out;
 }
 
 .main-nav ul li a:hover .bullet {
-    width: 50%;
+    flex: 1 2 80%;
 }
 
-/*
+
 .main-nav li a::after {
     content: '';
-*/
 
-/*    min-width: 10%;*/
-
-/*         width: 100%;*/
-
-/*
-    height: 2px;
     display: block;
     background: none;
-    flex: 1 1 10%;
-    transition: background 2s ease-in-out;
-    transition: width 2s ease-in-out;
+    flex: 1 3 20%;
+    /*    transition: flex-basis 2s ease-in-out;*/
 }
 
-.main-nav li:hover a::after {
-    width: 5%;
-    background: #000;
-}
-*/
 
 /*
 .main-nav li:before {
